# se202

fibo/: Cargo.toml
fibo/src/: fibo.rs  main.rs
problems/src/: main.rs
tp-led-matrix/: Cargo.toml
tp-led-matrix/.cargo/: config.toml
tp-led-matrix/src/: gamma.rs  image.rs  lib.rs  main.rs  matrix.rs
tp-rust-2/src/: machine.rs
