[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = {version = "2.0.0"}
cortex-m-rt = {version = "0.7.1"}
stm32l4 = {version = "0.14.0", features = ["stm32l4x5"]}
defmt = {version = "0.3.1"}
defmt-rtt = {version = "0.3.2"}
panic-probe = {version = "0.3.0", features = ["print-defmt"]}

[[bin]]
name = "tp-led-matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations

