[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = {version = "2.0.0"}
cortex-m-rt = {version = "0.7.1"}
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", features = ["stm32l475", "rt"], rev = "46006b9e2c2d2ea5ea9a00409505e17d16279e1f" }
defmt = {version = "0.3.1"}
defmt-rtt = {version = "0.3.2"}
cortex-m-rtic = {version = "1.0.0"}
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
dwt-systick-monotonic = {version = "1.0.0"}

[[bin]]
name = "tp-led-matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations

